# Harness-Coder

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh.md  models.example.toml  pyproject.toml
.github/workflows/: ci.yml
apps/web/: package-lock.json
docs/: architecture.md  development-process.md  release-checklist.md  roadmap.md  roadmap.zh.md  showcase.md  spec-0.3.0.md  spec-0.4.0.md  spec-0.5.0.md  spec-0.6.0.md  spec-0.7.0.md  spec-0.8.0.md  spec-1.0.0.md  spec-1.0.1.md  spec-1.0.2.md  spec-1.1.0.md  spec-1.2.0.md  spec-1.2.1.md  spec-1.3.0.md  spec-1.3.1.md  spec-1.3.2.md  spec-1.3.3.md  spec-1.5.0.md  spec-1.5.1.md  spec-1.5.2.md  spec-1.5.3.md  spec-web-0.1.md  spec-web-0.2.md  workbench-design-language.md
docs/blog/: claude-code-prompt-caching.md
eval/: bugfix_cases.json  cases.json  greenfield_cases.json  hc_bench_20.json  hc_bench_40.json  hc_train_40.json
examples/bugfix_demo/: README.md
examples/failure_replay_demo/: README.md  replay_report.json  synthetic_trace.jsonl
examples/greenfield_demo/: README.md
examples/resume_demo/: README.md  checkpoint.json  interrupt_resume_trace.jsonl
harnesscoder/: __init__.py  cli.py  eval_runner.py  model_profiles.py  replay.py  tui.py
harnesscoder/core/: __init__.py  (+18 more)
scripts/: generate_hc_bench_20.py  generate_hc_bench_40.py  generate_hc_train_40.py
tests/: test_0_3_spec.py  test_bugfix_eval.py  test_control.py  test_eval_matrix.py  test_greenfield_eval.py  test_hc_bench_20.py  test_hc_bench_40.py  test_hc_train_40.py  test_model_adapter.py  test_runtime_features.py  test_tui.py  test_web_api.py
(+50 files in other folders)
